--- a/index.html
+++ b/index.html
@@ -12,7 +12,36 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>It is a standardized system for tagging text files to chieve font, color, graphic, and hyperlink effects on webpages.</li>
+          <li>It was designed by British scientist Sir Tim Berners-Lee at the CERN nuclear physics laboratory in Switzerland during the 1980s.</li>
+        </ul>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>enter your CSS notes here</li>
+        </ul>
+      </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch name: creates a new branch and switches to it</li>
+          <li>git pull origin main: pulls all modifications made to original branch</li>
+          <li>git push origin (feature branch): pushes modifications to remote Github branch</li>
+        </ul>
+      </section>
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+        <ul>
+          <li>enter your Javascript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
