--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-          <li>enter your Javascript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>A scripting language that enables you to create dynamically udating content, animate images, and control multimedia.</li>
+          <li>Arguably the easiest programming language to learn.</li>
         </ul>
       </section>
     </main>
